[package]
name = "DataContainer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlparser = "0.12"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
config = "0.11"
redis = "0.22"
lapin = "2.0" # For RabbitMQ
rdkafka = "0.27" # For Kafka
